--- a/client/client.html
+++ b/client/client.html
@@ -1,53 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>IGME-430 Project 1 Prototype</title>
-    <link rel="stylesheet" type="text/css" href="/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-    <script type="text/babel">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>IGME-430 Project 1 Prototype</title>
+  <link rel="stylesheet" type="text/css" href="/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+  <script type="text/babel">
+
+    //function to handle our response
+      const handleResponse = (xhr, parseResponse) => {
+        //grab the content section
+      const content = document.querySelector('#content');
+      console.log(parseResponse);
+
+      const p = document.createElement('p');
+
+            //parse the response text into a JSON object
+      const obj = JSON.parse(xhr.response);
+      console.log(obj);  
+      p.textContent = `Message: ${obj.message}`; 
+      
+      //check the status code
+      switch(xhr.status) {
+        case 200: //success
+          content.innerHTML = `<b>Success</b>`;
+          break;
+        case 201: //created
+          content.innerHTML = '<b>Create</b>';
+          break;
+        case 204: //updated (no response back from server)
+          content.innerHTML = '<b>Updated (No Content)</b>';
+          return;
+        case 400: //bad request
+          content.innerHTML = `<b>Bad Request</b>`;
+          break;
+          case 404: //bad request
+          content.innerHTML = `<b>Resource Not Found</b>`;
+          break ;
+        default: //any other status code
+          content.innerHTML = `Error code not implemented by client.`;
+          break;
+      }
+
+      //parse response if not HEAD
+      if(parseResponse){
+      content.appendChild(p);
+      }
+    };
+       //function to send an xhr request
+       const sendAjax = (url, acceptedType, dropTwo) => {
+      //create a new xhr (ajax) request. 
+      //Remember that these are ASYNCHRONOUS
+      var secondText = dropTwo;
+      const xhr = new XMLHttpRequest();
+      //set the xhr to a GET request to a certain URL
+      xhr.open('GET', url);
+      //Set the accept headers to the desired response mime type
+      //Server does NOT have to support this. It is a gentle request.
+      xhr.setRequestHeader ("Accept", acceptedType);
+      //When the xhr loads, call handleResponse and pass the xhr object
+      xhr.onload = () => handleResponse(xhr, dropTwo); 
+      //send our ajax request to the server
+      xhr.send();
+    } 
+    // init function
+    const init = () => {
+      const sendButton = document.querySelector("#send");
+      const addCardButton = document.querySelector("#addCard");
+
+      const send = () => {
+        const dropOne = document.querySelector("#urlField").value;
+
+        var dropTwo = document.querySelector("#methodSelect");
+        var dropTwoText = dropTwo.options[dropTwo.selectedIndex].text;
+
+        sendAjax(dropOne, 'application/json', dropTwoText);
+      }
+  
+
+      const addCard = () => {
+        var url ='addCards';
+        var name = document.querySelector("#nameField").value;
+        var cType = document.querySelector("#cType").value;
+        var level = document.querySelector("#levelField").value;
+        var att = document.querySelector("#attField").value;
+        var def = document.querySelector("#defField").value;
+        var getURL = document.querySelector("#urlField").value;
+
+        sendAjax(url, 'application/json', 'GET');
+      }
+
+      sendButton.addEventListener('click', send);
+      addCardButton.addEventListener('click', addCard);
+    };
+    window.onload = init;
+
 </script>
 </head>
 
 <body>
-        <section id="top">
-                <h3>OG Yu Gi Oh Card Generator</h3>
-                <div id="nameForm">
-                  <label for="name">Card Name: </label>
-                  <input id="nameField" type="text" name="name" class="textField"/><br>
-                  <label for="cardType">Card Type:</label>
-                  <select id="cType" name="cardType">
-                      <option value = "monst">Monster</option>
-                      <option value = "spell">Spell</option>
-                      <option value = "trap">Trap</option>
-                  </select>
-                  <label for="level">Level:</label>
-                  <input id="levelField" type="number" name="level" min="0" max="12" step="1"/><br>
-                  <label for="attValue">ATK:</label>
-                  <input id="attField" type="text" name="attValue" class="textField"/>
-                  <label for="attValue">DEF:</label>
-                  <input id="defField" type="text" name="defValue" class="textField"/><br>
-                  <label for="descriptionField">Description/Effect:</label>
-                  <input id="description" type="text" name="description" class="textField"/><br>
-                  <label for="url">Image(URL):</label>
-                  <input id="urlField" type="text" name="url"/>
-                  <button id="addUser">Add Card</button>
-                </div>
-                <div id="userForm"  method="get">
-                  <select id='urlField'>
-                    <option value='/getUsers'>/getUsers</option>
-                    <option value='/notReal'>/notReal</option>
-                  </select>
-                  <select id="methodSelect">
-                    <option value="get">GET</option>
-                    <option value="head">HEAD</option>
-                  </select>
-                    <button id="send">Send</button>
-                </div>
-              </section>
-              <section id="content">
-              </section>
+  <section id="top">
+    <h3>OG Yu Gi Oh Card Generator</h3>
+    <div id="nameForm">
+      <label for="name">Card Name: </label>
+      <input id="nameField" type="text" name="name" class="textField" /><br>
+      <label for="cardType">Card Type:</label>
+      <select id="cType" name="cardType">
+        <option value="monst">Monster</option>
+        <option value="spell">Spell</option>
+        <option value="trap">Trap</option>
+      </select>
+      <label for="level">Level:</label>
+      <input id="levelField" type="number" name="level" min="0" max="12" step="1" /><br>
+      <label for="attValue">ATK:</label>
+      <input id="attField" type="text" name="attValue" class="textField" />
+      <label for="attValue">DEF:</label>
+      <input id="defField" type="text" name="defValue" class="textField" /><br>
+      <label for="descriptionField">Description/Effect:</label>
+      <textarea id="description" type="text" name="description" rows="5" cols="50" class="textField">Enter description here...</textarea><br>
+      <label for="url">Image(URL):</label>
+      <input id="urlField" type="text" name="url" />
+      <br>
+      <button id="addCard">Add Card</button><br>
+    </div>
+    <div id="userForm" method="get">
+      <select id='urlField'>
+        <option value='/getUsers'>/getUsers</option>
+        <option value='/notReal'>/notReal</option>
+      </select>
+      <select id="methodSelect">
+        <option value="get">GET</option>
+        <option value="head">HEAD</option>
+      </select>
+      <button id="send">Send</button>
+    </div>
+  </section>
+  <section id="content">
+  </section>
 </body>
+
 </html>
