--- a/client/client.html
+++ b/client/client.html
@@ -113,16 +113,10 @@
         <option value="spell">Spell</option>
         <option value="trap">Trap</option>
       </select>
-      <label for="level">Level:</label>
-      <input id="levelField" type="number" name="level" min="0" max="12" step="1" /><br>
-      <label for="attValue">ATK:</label>
-      <input id="attField" type="text" name="attValue" class="textField" />
-      <label for="attValue">DEF:</label>
-      <input id="defField" type="text" name="defValue" class="textField" /><br>
-      <label for="descriptionField">Description/Effect:</label>
-      <textarea id="description" type="text" name="description" rows="5" cols="50" class="textField">Enter description here...</textarea><br>
-      <label for="url">Image(URL):</label>
-      <input id="urlField" type="text" name="url" />
+      <label for="description">Description/Effect:</label>
+      <textarea id="descriptionField" type="text" name="description" rows="5" cols="50" class="textField"></textarea><br>
+      <label for="imgUrl">Image(URL):</label>
+      <input id="urlField" type="text" name="imgUrl" />
       <br>
       <button id="addCard">Add Card</button><br>
     </div>
