--- a/client/client.html
+++ b/client/client.html
@@ -10,7 +10,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
   <script type="text/babel">
 
-
     //function to handle our response
       const handleResponse = (xhr, parseResponse) => {
         //update client
@@ -19,136 +18,119 @@
       //check the status code
       switch(xhr.status) {
         case 200: //success
-          content.innerHTML = `<h2>Cards</h2>`;
+          content.innerHTML = `<h2>Cards Created</h2>`;
           break;
         case 201: //created
           content.innerHTML = '<b>Created A Card</b>';
           break;
         case 204: //updated (no response back from server)
-          content.innerHTML = '<b>Card updated</b>';
+          content.innerHTML = '<b>Card Updated</b>';
           return;
         case 400: //bad request
           content.innerHTML = `<b>You're missing information</b>`;
           break;
           case 404: //bad request
           content.innerHTML = `<b>Resource Not Found</b>`;
-          break ;
+          break;
         default: //any other status code
           break;
       }
 
-      //parse response if not HEAD
+      // parse response
       if(parseResponse){
-      const response = JSON.parse(xhr.response);
-      console.dir(response.message);
-      if(xhr.status === 200){
-        if(response.message.cards){
-          for(let key in response.message.cards){
-            if(response.message.cards.hasOwnProperty(key)){
-              const div = document.createElement('div');
-              const img = document.createElement('img');
-              const cardName = document.createElement('h4');
-              const cardTyp = document.createElement('p');
-              const cardDescription = document.createElement('p');
+        const obj = JSON.parse(xhr.response);
+        console.dir(obj.message);
+        if(xhr.status === 200){
+        if(obj.message.cards){
+        for(let key in obj.message.cards){
+          if(obj.message.cards.hasOwnProperty(key)){
+            const div = document.createElement('div');   // create div
+            const img = document.createElement('img');   // img
+            const name = document.createElement('h3');   // card name
+            const cType = document.createElement('p');   // card type
+            const descript = document.createElement('p'); // description
 
-              // display the card
-              cardName.innerHTML = response.message.cards[key].name;
-              cardTyp.innerHTML = '<b> Card Type: </b>' + response.message.cards[key].cardType;
-              cardDescription.innerHTML = '<b> Description: </b>'+ response.message.cards[key].description;
+            name.innerHTML = obj.message.cards[key].name;
+            cType.innerHTML = obj.message.cards[key].cardType;
+            descript.innerHTML = obj.message.cards[key].description;
 
-                // create ids to be edited in css
-                img.setAttribute('src', response.message.cards[key].imgUrl);
-                img.setAttribute('class', 'imgCard');
-                cardName.setAttribute('class', 'cTitle');
-                div.setAttribute('class', 'ygoCard');
-
-                // add to div
-                div.appendChild(img);
-                div.appendChild(cardName);
-
-                // add div to main content
-                content.appendChild(div);
-            }
+            img.setAttribute('src', obj.message.cards[key].imgUrl);
+            img.setAttribute('class', 'cardImg');
+            name.setAttribute('class', 'cardTitle');
+            div.setAttribute('class', 'ygoCard');
+            
+            div.appendChild(img);
+            div.appendChild(name);
+            div.appendChild(cType);
+            div.appendChild(descript);
+            content.appendChild(div);
           }
         }
       }
-      // print out json message
-      else {
-        content.innerHTML == `<p>${response.message}</p>`;
+    }
+        else{
+            content.innerHTML += `<p> ${obj.message} </p>`;
       }
     }
   };
 
-  // function to send our post request
-  const sendPost = (url, type, e) => {
-          //create a new Ajax request (remember this is asynchronous)
-          const xhr = new XMLHttpRequest();
-      //set the method (POST) and url (action field from form)
-      xhr.open(type, url);
-            //set our request type to x-www-form-urlencoded
-      //which is one of the common types of form data. 
-      //This type has the same format as query strings key=value&key2=value2
-      xhr.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
-      //set our requested response type in hopes of a JSON response
-      xhr.setRequestHeader ('Accept', 'application/json');
 
-      //set our function to handle the response
+    const sendPost = (url, type, e) => {
+
+      const xhr = new XMLHttpRequest();
+      xhr.open(type, url);
+      xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+      xhr.setRequestHeader('Accept', 'application/json');
+
       xhr.onload = () => {
-        if(xhr.status !== 204){
+        if (type === 'get' || (type === 'post' && xhr.status === 204)){
           handleResponse(xhr, true);
         }
-        else{
-          handleResponse(xhr,false);
+        else if(type === 'head' || (type === 'post' && xhr.status === 204)){
+          handleResponse(xhr, false);
         }
       };
+
+      if(type === 'post'){
+      const nameForm = document.querySelector('#cardForm');
+      const nameField = nameForm.querySelector('#nameField');
+      const cType = nameForm.querySelector('#cType');
+      const description = nameForm.querySelector('#descriptionField');
+      const imgUrl = nameForm.querySelector('#urlField');
+
+
+      const formData = `name=${nameField.value}&cardType=${cType.value}&description=${description.value}&imgUrl=${imgUrl.value}`;
       
-      if (type === 'post'){
-        const cardForm = document.querySelector('#cardForm');
-        const nameField = cardForm.querySelector('#nameField');
-        const cType = cardForm.querySelector('#cType');
-        const description = cardForm.querySelector('#description');
-        const imgField = cardForm.querySelector('#urlField');
+      xhr.send(formData);
 
-        const formData = `name=${nameField.value}&cardType=${cType.value}&description=${description.value}&imgUrl=${imgField.value}`;
-
-        console.dir(formData);
-
-        //send our request with the data
-        xhr.send(formData);
-              //prevent the browser's default action (to send the form on its own)
-      e.preventDefault();
-      //return false to prevent the browser from trying to change page
       return false;
-    } else{
-      xhr.send();
+      }
+      else{
+        xhr.send();
+      }
+    };
+
+
+    const init = () => {
+      const cardForm = document.querySelector('#cardForm');
+      const postCard = cardForm.querySelectorAll('input')[2];
+
+      postCard.addEventListener('click', e => {
+        e.preventDefault();
+        sendPost('/addCard', 'post', e);
+      });
+
+      const actionForm = document.querySelector('#actionForm');
+      const getCards = actionForm.querySelector('input');
+
+      getCards.addEventListener('click', e =>{
+        e.preventDefault();
+        sendPost('/getCards', 'get', e);
+      });
+
     }
-  };
-
-  const init = () => {
-    const cardForm = document.querySelector('#cardForm');
-    const actionForm = document.querySelector('#actionform');
-    const getCards = actionForm.querySelector('#input');
-    console.log(getCards);
-    // const postCard = cardForm.querySelectorAll('input')[2];
-    // const header = document.getElementById('title');
-    // getCards.addEventListener('click', e => {
-    //   sendPost('/getCards', 'get', e);
-    // });
-    // postCard.addEventListener('click', e => {
-    //   sendPost('/addCard', 'post', e);
-    // });
-    // header.addEventListener('click', e =>{
-    //   sendPost('/getCards', 'head', e);
-    // });
-  }
-
-  window.onload = sendPost('/getCards', 'get');
-  window.onload = init;
-
-
-
-
-
+    window.onload = sendPost('/getCards', 'get');
+    window.onload = init;
 </script>
 </head>
 
@@ -156,7 +138,7 @@
   <div id="header">
     <h1 id='title'>YGO Card Generator</h1>
     <p>All these new Yu Gi Oh cards are wack.</p>
-    <p>Make your own card and check out all the cards you have created!</p>
+    <p>Make your own card and check out all the cards you have created instead!</p>
   </div>
 
   <form id="cardForm">
@@ -167,7 +149,7 @@
     <label for="cardType">Card Type:</label>
     <select id="cType" name="cardType">
 
-      <option value="monst">Monster</option>
+      <option value="monster">Monster</option>
       <option value="spell">Spell</option>
       <option value="trap">Trap</option>
 
@@ -180,13 +162,13 @@
     <input id="urlField" type="text" name="imgUrl" /><br>
 
     <div id='addCard'>
-      <input type='submit' value='Add Card' />
+      <input type='submit' value='Add Card'/>
     </div>
   </form>
 
-  <form id='actionForm' action='getCards' method='get'>
+  <form id='actionForm' action='/getCards' method='get'>
     <div id='refresh'>
-      <input type='submit' value='Refresh' />
+      <input type='submit' value='Get Cards' />
     </div>
   </form>
 
